--- a/siw_food/src/main/resources/templates/index.html
+++ b/siw_food/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div><img src="/images/cooking.jpg" width="50%" /></div>
+	<div><img src="/image/cooking.jpg" width="50%" /></div>
 	<h1>Consulta</h1>
 	<div>
 		<a href="/cuochi">CUOCHI</a>
