--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>Cuochi</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+    <title>Cuochi</title>
 </head>
-
 <body>
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%" /></a></div>
-	<h1>Cuochi</h1>
-	<div th:if="${cuochi==null || cuochi.isEmpty()}">Non ci sono cuochi nel sistema</div>
-	<ul>
-		<li th:each="cuoco : ${cuochi}">
-			<a th:href="@{'/movie' + '/' + ${movie.id}}" th:text="${movie.title} + ' (' + ${movie.year} + ')'">Up!
-				(2000)</a>
-		</li>
-	</ul>
+    <h1>Lista dei Cuochi</h1>
+    <ul>
+        <li th:each="cuoco : ${cuochi}">
+            <div>
+                <img th:src="@{${cuoco.urlImage}}" width="30%"/>
+            </div>
+            <a th:href="@{/cuoco/{id}(id=${cuoco.id})}">
+                <span th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}"></span>
+            </a>
+            <span th:text="${cuoco.dataNascita}"></span>
+        </li>
+    </ul>
 </body>
-
 </html>
