--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -16,5 +16,7 @@
             <span th:text="${cuoco.dataNascita}"></span>
         </li>
     </ul>
+    <a href="/cuochi/search">Vai alla pagina di ricerca dei cuochi</a>
+    <a href="/cuochi/new">Vai alla pagina per l'aggiunta di un cuoco</a>
 </body>
 </html>
