--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -25,5 +25,11 @@
             </li>
         </ul>
     </div>
+    <div>
+        <a th:href="@{/cuochi/edit/{id}(id=${cuoco.id})}">edita</a>    
+    </div>
+    <div>
+        <a th:href="@{/cuochi/delete/{id}(id=${cuoco.id})}">elimina</a>    
+    </div>
 </body>
 </html>
