--- a/siw_food/src/main/resources/templates/ricetta.html
+++ b/siw_food/src/main/resources/templates/ricetta.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Dettagli della Ricetta</title>
+    <title>Dettagli Ricetta</title>
 </head>
 <body>
     <h1>Dettagli della Ricetta</h1>
-
+    
     <div>
-        <img th:src="@{${ricetta.urlImage}}" width="30%" alt="Immagine Ricetta"/>
+        <h2 th:text="${ricetta.nome}">Nome della Ricetta</h2>
+        <p th:text="${ricetta.descrizione}">Descrizione della Ricetta</p>
     </div>
-
-    <div>
-        <h2 th:text="${ricetta.nome}"></h2>
-        <p th:text="${ricetta.descrizione}"></p>
-    </div>
-
+    
     <div>
         <h3>Ingredienti</h3>
         <ul>
             <li th:each="ingrediente : ${ricetta.ingredienti}">
-                <span th:text="${ingrediente.nome} + ': ' + ${ingrediente.quantita}"></span>
+                <span th:text="${ingrediente.nome}">Nome Ingrediente</span>: 
+                <span th:text="${ingrediente.quantita}">Quantità Ingrediente</span>
             </li>
         </ul>
     </div>
-
+    
     <div>
-        <h3>Proposto da</h3>
-        <p th:text="${ricetta.cuoco.nome} + ' ' + ${ricetta.cuoco.cognome}"></p>
+        <h3>Proposta da</h3>
+        <p th:text="${ricetta.cuoco.nome} + ' ' + ${ricetta.cuoco.cognome}">Nome Cuoco</p>
     </div>
-
+    
     <div>
-        <a th:href="@{/ricette/edit/{id}(id=${ricetta.id})}">Edita</a>
-    </div>
-    <div>
-        <a th:href="@{/ricette/delete/{id}(id=${ricetta.id})}">Elimina</a>
+        <a th:href="@{/ricette}">Torna alla lista delle Ricette</a>
     </div>
 </body>
 </html>
