levato la parte di auth
tolta la parte di auth tanto non c'ho capito niente, finire prima tutte le operazioni possibili ora da cuoco.html posso aggiungere una ricetta -> fai la stessa cosa da ricetta a ingrediente, finire cancellazione, edit e aggiunta per le entità. le ricerche funzionano

--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -16,7 +16,17 @@
             <span th:text="${cuoco.dataNascita}"></span>
         </li>
     </ul>
-    <a href="/cuochi/search">Vai alla pagina di ricerca dei cuochi</a>
-    <a href="/cuochi/new">Vai alla pagina per l'aggiunta di un cuoco</a>
+    
+    <div>
+        <a href="/cuochi/search">Vai alla pagina di ricerca dei cuochi</a>
+    </div>
+
+    <div>
+        <a href="/cuochi/new">Vai alla pagina per l'aggiunta di un cuoco</a>
+    </div>
+
+    <div>
+        <a href="/">torna all'home page</a>
+    </div>
 </body>
 </html>
