--- a/siw_food/src/main/resources/templates/ricette.html
+++ b/siw_food/src/main/resources/templates/ricette.html
@@ -16,6 +16,10 @@
     </div>
     
     <div>
+        <a th:href="@{/ricette/search}">Vai alla pagina di ricerca delle ricette</a>
+    </div>
+    
+    <div>
         <a th:href="@{/}">Torna alla Home</a>
     </div>
 </body>
