--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -6,7 +6,7 @@
     <h1>Dettagli del Cuoco</h1>
     
     <div>
-        <img th:src="@{${cuoco.urlImage}}" width="30%"/>
+        <img th:if="${cuoco.getFirstImmagine() != null}" th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}" width="30%"/>
     </div>
     
     <div>
@@ -26,13 +26,13 @@
         </ul>
     </div>
     <div>
-        <a th:href="@{/cuochi/edit/{id}(id=${cuoco.id})}">edita</a>    
+        <a th:href="@{/admin/editCuoco/{id}(id=${cuoco.id})}">edita</a>    
     </div>
     <div>
-        <a th:href="@{/cuochi/delete/{id}(id=${cuoco.id})}">elimina</a>    
+        <a th:href="@{/admin/deleteCuoco/{id}(id=${cuoco.id})}">elimina</a>    
     </div>
     <div>
-        <a th:href="@{/ricette/new/{cuoco_id}(cuoco_id=${cuoco.id})}">aggiungi ricetta</a>    
+        <a th:href="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}">aggiungi ricetta</a>    
     </div>
     <div>
         <a th:href="@{/cuochi}">torna alla lista dei cuochi</a>    
