--- a/siw_food/src/main/resources/templates/forms/formNewCuoco.html
+++ b/siw_food/src/main/resources/templates/forms/formNewCuoco.html
@@ -5,22 +5,22 @@
 </head>
 <body>
     <h1>Crea un Nuovo Cuoco</h1>
-    <form action="#" th:action="@{/cuochi/save}" th:object="${cuoco}" method="post">
+    <form action="/admin/addCuoco" method="post" enctype="multipart/form-data" th:object="${cuoco}">
         <div>
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" th:field="*{nome}" />
+            <input type="text" id="nome" th:field="*{nome}" required>
         </div>
         <div>
             <label for="cognome">Cognome:</label>
-            <input type="text" id="cognome" th:field="*{cognome}" />
+            <input type="text" id="cognome" th:field="*{cognome}" required>
         </div>
         <div>
             <label for="dataNascita">Data di Nascita:</label>
-            <input type="date" id="dataNascita" th:field="*{dataNascita}" />
+            <input type="date" id="dataNascita" th:field="*{dataNascita}" required>
         </div>
         <div>
-            <label for="urlImage">urlImage:</label>
-            <input type="text" id="urlImage" th:field="*{urlImage}" />
+            <label for="immagine">Immagine:</label>
+            <input type="file" id="immagine" name="immagine" accept="image/*" required>
         </div>
         <div>
             <button type="submit">Salva</button>
