--- a/siw_food/src/main/resources/templates/auth/formLogin.html
+++ b/siw_food/src/main/resources/templates/auth/formLogin.html
@@ -3,18 +3,21 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+<h1>Login</h1>
     <form th:action="@{/login}" method="post">
         <div>
-            <label>Username:</label>
-            <input type="text" name="username" />
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username">
         </div>
         <div>
-            <label>Password:</label>
-            <input type="password" name="password" />
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
         </div>
         <div>
             <button type="submit">Login</button>
+        </div>
+        <div>
+            <a th:href="@{/register}">Register</a>
         </div>
     </form>
 </body>
