--- a/siw_food/src/main/resources/templates/forms/formNewRicetta.html
+++ b/siw_food/src/main/resources/templates/forms/formNewRicetta.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>New Ricetta</h1>
-    <form th:action="@{/ricette/save/{cuoco_id}(cuoco_id=${cuoco.id})}" th:object="${ricetta}" method="post">
+    <form th:action="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}" th:object="${ricetta}" method="post">
         <div>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" th:field="*{nome}" />
