refactoring e un po di front end

--- a/siw_food/src/main/resources/templates/admin/formEditCuoco.html
+++ b/siw_food/src/main/resources/templates/admin/formEditCuoco.html
@@ -17,10 +17,8 @@
             <label for="dataNascita">Data di Nascita:</label>
             <input type="date" id="dataNascita" th:field="*{dataNascita}" />
         </div>
-        <div>
-            <label for="urlImage">urlImage:</label>
-            <input type="text" id="urlImage" th:field="*{urlImage}" />
-        </div>
+        <!--DEVO METTERE LA PARTE DELLA FOTO OPPURE FARE IN MODO CHE I CAMPI NON
+        COMPILATI SIANO SALVATI CON I VECCHI DATI-->
         <div>
             <button type="submit">Salva</button>
         </div>
