--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-        <a href="/admin/addCuoco">Vai alla pagina per l'aggiunta di un cuoco</a>
+        <a href="/admin/addCuoco">ADMIN AGGIUNGE CUOCO</a>
     </div>
 
     <div>
