--- a/siw_food/src/main/resources/templates/auth/register.html
+++ b/siw_food/src/main/resources/templates/auth/register.html
@@ -43,7 +43,8 @@
         <label for="dataNascita">Data di nascita</label>
         <input type="date" id="dataNascita" name="dataNascita" placeholder="Enter your birthdate" th:field="${utente.dataNascita}" required />
       </div>
-      <div>
+      <!-- Immagine input box -->
+      <div class="input_box">
         <label for="immagine">Immagine:</label>
         <input type="file" id="immagine" name="immagine" accept="image/*" required>
       </div>
