--- a/siw_food/src/main/resources/templates/auth/register.html
+++ b/siw_food/src/main/resources/templates/auth/register.html
@@ -45,8 +45,8 @@
       </div>
       <!-- Immagine input box -->
       <div class="input_box">
-        <label for="immagine">Immagine:</label>
-        <input type="file" id="immagine" name="immagine" accept="image/*" required>
+        <label for="immagine">Immagine (optional):</label>
+        <input type="file" id="immagine" name="immagine" accept="image/*">
       </div>
        <!-- Login button -->
       <button type="submit">Register</button>
