--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -5,6 +5,9 @@
 <body>
     <h1>Dettagli del Cuoco</h1>
     
+    <div>
+        <img th:if="${cuoco.getFirstImmagine() != null}" th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}" width="30%"/>
+    </div>
     
     
     <div>
@@ -31,6 +34,9 @@
     </div>
     <div>
         <a th:href="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}">ADMIN ADD RICETTA</a>    
+    </div>
+    <div>
+        <a th:href="@{/cuoco/addRicetta/{cuoco_id}/{utente_id}(cuoco_id=${cuoco.id},utente_id=${credenziali.utente.id})}">ADMIN ADD RICETTA</a>    
     </div>
 
     
