--- a/siw_food/src/main/resources/templates/forms/formSearchRicetta.html
+++ b/siw_food/src/main/resources/templates/forms/formSearchRicetta.html
@@ -6,24 +6,27 @@
 
 <body>
     <h1>Ricerca Ricetta in base al nome</h1>
-    <form th:action="@{/ricette/byNome}" method="post">
+    <form action="#" th:action="@{/ricette/byNome}" method="post">
         <div>
-            <label>Nome Ricetta:</label>
-            <input type="text" name="nome" />
+            <label for="nome">Nome Ricetta:</label>
+            <input type="text" name="nome" th:value="${nome}" />
         </div>
+        
         <div>
-            <button type="submit">Cerca per Nome</button>
+            <button type="submit">Cerca</button>
         </div>
+    
     </form>
 
     <h1>Ricerca Ricetta in base al nome di un ingrediente</h1>
     <form th:action="@{/ricette/byIngrediente}" method="post">
         <div>
-            <label>Nome Ingrediente:</label>
-            <input type="text" name="nomeIngrediente" />
+            <label for="ingr">Nome Ingrediente:</label>
+            <input type="text" name="ingr" th:value="${ingr}" />
         </div>
+        
         <div>
-            <button type="submit">Cerca per Ingrediente</button>
+            <button type="submit">Cerca</button>
         </div>
     </form>
 
