sistemato edit ricetta
mi sembra funziona tutto più o meno bene

--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Dettagli del Cuoco</h1>
     
-    <div>
+    <div th:if="${cuoco.immagini}">
         <img th:if="${cuoco.getFirstImmagine() != null}" th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}" width="30%"/>
     </div>
     
