--- a/siw_food/src/main/resources/templates/error/errorPage.html
+++ b/siw_food/src/main/resources/templates/error/errorPage.html
@@ -12,7 +12,7 @@
                ERROR
             </h2>
             <h4 data-text="Opps! Page not found">
-               la pagina non esiste o non hai i permessi per accedervi
+               la pagina non esiste o non hai i permessi per effettuare questa operazione
             </h4>
             <p>
                Sorry, the page you're looking for doesn't exist. If you think something is broken, report a problem.
